# AiOT-test-deploy

./: .gitignore  README.md  docker-compose.yaml
angie/: Dockerfile  angie.conf
config/: example_env_prod.md
fastapi-auth-keycloak/: Dockerfile  main.py  pyproject.toml
fastapi-auth-keycloak/api/v1/routers/: auth.py
fastapi-auth-keycloak/application/: keycloak_admin_service.py  keycloak_auth_service.py  keycloak_user_service.py
fastapi-auth-keycloak/core/: config.py  dependencies.py  exceptions.py
fastapi-auth-keycloak/infrastructure/: keycloak_admin_repository.py  keycloak_auth_repository.py  keycloak_client.py  keycloak_user_repository.py
fastapi-auth-keycloak/keycloak/config/: user-config.json
fastapi-auth-keycloak/keycloak/realms/: myrealm.json
fastapi-auth-keycloak/schemas/: auth.py  token.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/app/providers/: ToastProvider.tsx
frontend/src/entities/user/model/: useAuthState.ts
frontend/src/features/forgot-password/api/: forgotPasswordApi.ts
frontend/src/features/forgot-password/model/: useForgorPassword.ts
frontend/src/features/forgot-password/ui/: index.ts
frontend/src/features/login/api/: loginApi.ts
frontend/src/features/login/model/: useLogin.ts
frontend/src/features/login/ui/: index.ts
frontend/src/features/logout/api/: logoutApi.ts
frontend/src/pages/Home/: HomePages.tsx  index.ts
frontend/src/shared/api/: auth.ts  index.ts
frontend/src/shared/lib/: index.ts  tokenStorage.ts
(+32 files in other folders)
