[project]
name = "fastapi-auth-keycloak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "pydantic[email]>=2.12.2",
    "pydantic-settings>=2.11.0",
    "uvicorn[standard]>=0.37.0",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "ruff>=0.14.0",
]
